# zwift-pc-remote-control

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SIRI_API_INTEGRATION.md  ZWIFT_LAUNCHER_AUTOMATION.md  deploy-all-automation.sh  deploy-zwift-launcher-automation.sh  docker-compose.yml  pyproject.toml  run-docker.sh  run-local.sh
.github/workflows/: ci.yml
api/: __init__.py  config.py  main.py  models.py
api/routers/: __init__.py  control.py  status.py
api/services/: __init__.py  pc_control.py  status_checker.py  task_manager.py
api/utils/: __init__.py  network.py  ssh_client.py
tests/: conftest.py  test_control.py  test_status.py
tests/services/: test_pc_control.py
